# raft-lab-skeleton

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  multinode.cpp  node.cpp
inc/common/: common.hpp  logger.hpp
inc/rafty/: raft.hpp
inc/rafty/impl/: raft.ipp
inc/toolings/: raft_wrapper.hpp  test_config.hpp
proto/: CMakeLists.txt  raft.proto
src/: raft.cpp
